Update 5.3 PATTERN: LEVERAGE FUNCTION AS A SERVICE.md

--- a/Building-Modern-Cloud-Native-Apps/5.3 PATTERN: LEVERAGE FUNCTION AS A SERVICE.md
+++ b/Building-Modern-Cloud-Native-Apps/5.3 PATTERN: LEVERAGE FUNCTION AS A SERVICE.md
@@ -39,6 +39,7 @@ Currently there are some limitations of cloud functions which need to be evaluat
 *	Request and response payload size is maximum 6 MB (sync) and 256 KB (async)
 *	ENI exhaustion when lambdas are deployed in a VPC
 *	Cold start can be an issue if there are no active instances of your function to serve requests resulting in initialization time lag.  Time lag depends upon the programming language used and also increases if lambda is deployed in VPC as ENI attachment takes time. Use languages such Go, python, node.js instead of Java for better performance.
+[Edit 13-Nov-19]: In Oct'19, AWS has made a significant update to improve cold start times especially for VPC-enabled lambda services.  With this update, cold start seems to become a non-issue. More details in this AWS post: rolled https://aws.amazon.com/blogs/compute/announcing-improved-vpc-networking-for-aws-lambda-functions/
 
 Most of the current popular FaaS offerings are proprietary implementations. Knative (https://cloud.google.com/knative/) tries to address this by being an open source serverless platform that integrates well with the popular Kubernetes (henceforth named ‘k8s’) ecosystem. With Knative you can model computations on request in a supported framework of your choice (including Ruby on Rails, Django and Spring among others); subscribe, deliver and manage events; integrate with familiar CI and CD tools, build containers from source and most importantly designed to run as a service on major cloud providers (Pivotal, SAP, Red Hat, IBM). 
 
