--- a/Building-Modern-Cloud-Native-Apps/5.3 PATTERN: LEVERAGE FUNCTION AS A SERVICE.md
+++ b/Building-Modern-Cloud-Native-Apps/5.3 PATTERN: LEVERAGE FUNCTION AS A SERVICE.md
@@ -41,7 +41,8 @@ Currently there are some limitations of cloud functions which need to be evaluat
 *	Cold start can be an issue if there are no active instances of your function to serve requests resulting in initialization time lag.  Time lag depends upon the programming language used and also increases if lambda is deployed in VPC as ENI attachment takes time. Use languages such Go, python, node.js instead of Java for better performance.
 [Edit 13-Nov-19]: In Oct'19, AWS has made a significant update to improve cold start times especially for VPC-enabled lambda services.  With this update, cold start seems to become a non-issue. More details in this AWS post: rolled https://aws.amazon.com/blogs/compute/announcing-improved-vpc-networking-for-aws-lambda-functions/
 
-Most of the current popular FaaS offerings are proprietary implementations. Knative (https://cloud.google.com/knative/) tries to address this by being an open source serverless platform that integrates well with the popular Kubernetes (henceforth named ‘k8s’) ecosystem. With Knative you can model computations on request in a supported framework of your choice (including Ruby on Rails, Django and Spring among others); subscribe, deliver and manage events; integrate with familiar CI and CD tools, build containers from source and most importantly designed to run as a service on major cloud providers (Pivotal, SAP, Red Hat, IBM). 
+All the current popular FaaS offerings such as lambdas, Google functions and Azure functions are proprietary implementations. 
+Knative (https://cloud.google.com/knative/) tries to address this by being an open source serverless platform that integrates well with the popular Kubernetes (henceforth named ‘k8s’) ecosystem. In addition to being an open standard, how KNative differs from pure FaaS offerings is that it combines the portability of container runtime with infrastructure abstraction and also provides capabilities to serve requests and events.  With Knative you can model computations on request in a supported framework of your choice (including Ruby on Rails, Django and Spring among others); subscribe, deliver and manage events; integrate with familiar CI and CD tools, build containers from source and most importantly designed to run as a service on major cloud providers (Pivotal, SAP, Red Hat, IBM). 
 
 Additionally, one of the earlier challenges was that vendor managed services such as FaaS could not be replicated in local environment easily and required application deployment thru CLI or console for unit testing and verification. In AWS, there are alternatives such as the vendor provided SAM Local (https://github.com/awslabs/aws-sam-cli) and open source localstack (https://github.com/localstack/localstack) that promises to provide a test/mocking framework with support for more than 20 AWS managed services.
 
